--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,40 @@
 /*  your css code here. If applicable */
+  #grid{
+      display: grid;
+      grid-template-columns: repeat(5,1fr);
+      grid-template-rows: repeat(4,1fr);
+      width: 50%;
+      grid-column-gap: 5px;
+      grid-row-gap: 5px;
+    }
+    .item{
+      grid-column-gap:12px ;
+      grid-row-gap:12px ;
+      background-color: green;
+      border: 1px solid black;
+    }
+    .item-1{
+      grid-column: 1/span 5;
+      
+    }
+    .item-2{
+      grid-row: 2/span 4;
+    }
+    .item-3{
+      grid-column: 2/span 2;
+    }
+    .item-4{
+      grid-column: 4/span 4;
+    }
+    .item-5{
+      grid-column: 2/span 2;
+    }
+    .item-6{
+      grid-column: 4/span 4;
+    }
+    .item-9{
+      grid-column: 4/span 4;
+    }
+    .item-10{
+      grid-column: 2/span 4;
+    }
