--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   #grid{
       display: grid;
       grid-template-columns: repeat(5,1fr);
-      grid-template-rows: repeat(4,1fr);
+      grid-template-rows: repeat(5,124px);
       width: 50%;
       grid-column-gap: 5px;
       grid-row-gap: 5px;
@@ -14,7 +14,7 @@
       border: 1px solid black;
     }
     .item-1{
-      grid-column: 1/span 5;
+      grid-column: span 4/auto;
       
     }
     .item-2{
