--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*  your css code here. If applicable */
   #grid{
       display: grid;
-      grid-template-columns: repeat(5,1fr);
+      grid-template-columns: repeat(4,242.5px);
       grid-template-rows: repeat(5,124px);
       width: 50%;
       grid-column-gap: 5px;
@@ -18,7 +18,7 @@
       
     }
     .item-2{
-      grid-row: 2/span 4;
+      grid-row: spam 4/2;
     }
     .item-3{
       grid-column: 2/span 2;
